# mkp-sci-com

./: .gitignore  Dockerfile  README.md  batch.tdlconf  pyproject.toml  setup.cfg  sky_model.txt  stationspec.json
CorrelatorTests/: README.md
CorrelatorTests/code/: J0408_L_fl  J0408_U_fl  J0408_U_posn  J1939_L_fl  J1939_L_posn  J1939_U_posn  USEFUL SCRIPTS FROM NIRUJ.docx  allcode.py  casa_config.py  corrtests.py  corrtests_config.py  delaytracks_config.py  delaytracks_detect.py  docasa_64chan_config.py  docasa_64chan_proper.py  docasa_basiccal.py  finddrops.py  getdata.py  libs.py  mylibs.py  read_avspec_casa64chan.py  sdp_bandpass.py  sdp_gaincal.py
CorrelatorTests/reports/: 1596094172_fullreport.docx  1596158164_fullreport.docx  1596163435_fullreport.docx  1596172238_fullreport.docx  July Corr L band 4K plots.docx  July corr L 1K plots.docx
meqtree-sim/: Dockerfile  README.md  meqtree-sim.def  runsim.sh  setup.sh  sim_config.tdl  stationspec.json
meqtree-sim/config/: full_config.tdl  sim_config.tdl  stationspec.json
meqtree-sim/data/: meerkat_plus.itrf.txt
meqtree-sim/mk_sim_example/: single_point.txt
meqtree-sim/scripts/: split_beam.py
meqtree-sim/sky_models/: single_point_source.txt  sources.txt
scripts/CorrelatorTests/: Readme
scripts/CorrelatorTests/code/: J0408_L_posn  J1939_U_fl  calibmodel.py  corrtestslib.py
scripts/CorrelatorTests/reports/: 1595971406_fullreport.docx  1596017058_fullreport.docx  1596017061_fullreport.docx
sim/meqtree-sim/: sandbox.ipynb
sim/meqtree-sim/configs/: stationspec_hetero.json  stationspec_homo.json
src/mkp_sci_com/: __init__.py  utils.py
src/mkp_sci_com.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mkpsim/: README.md  custom-cabs.yml  mkpsim.yml  utils.py
tests/: test_import.py  test_utils_split_beam.py
(+20 files in other folders)
