[metadata]
name = mkp-sci-com
version = 0.0.0
description = MKP science components (includes sim)

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12
install_requires =
    stimela
    cult-cargo
    simms
    eidos
    casaconfig
    casadata
    casatasks
    casatools

[options.packages.find]
where = src
